--- a/part2/course-content/src/styles.css
+++ b/part2/course-content/src/styles.css
@@ -2,12 +2,8 @@ body {
     color: black;
 }
 h1 {
-    color: green;
+    color: rgb(17, 32, 116);
 }
 p {
-    color: blue;
-}
-div {
-    border-color: black;
-    border-style: solid;
+    color: rgb(54, 54, 58);
 }
